--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,19 @@ body { margin: 0; background: #fff; color: #111; }
 .announcement-track {
   animation: announcement-marquee 25s linear infinite;
 }
+
+@layer utilities {
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+  .line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
